WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238248
REGRESSION(
r291611
): Fix GTK/WPE build
https://bugs.webkit.org/show_bug.cgi?id=238248
Summary
REGRESSION(r291611): Fix GTK/WPE build
Víctor M. Jáquez L.
Reported
2022-03-23 02:56:34 PDT
It seems that the CI doesn't compile GTK/WPE webrtc branch using libwebrtc. Unreviewed build fix patch on the way.
Attachments
Patch
(3.26 KB, patch)
2022-03-23 03:04 PDT
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
Patch
(3.22 KB, patch)
2022-03-23 03:13 PDT
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Víctor M. Jáquez L.
Comment 1
2022-03-23 03:04:29 PDT
Created
attachment 455479
[details]
Patch
EWS
Comment 2
2022-03-23 03:07:10 PDT
ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!.
youenn fablet
Comment 3
2022-03-23 03:07:27 PDT
Thanks for the fix, I thought I fixed these bugs before committing, sorry about that.
Víctor M. Jáquez L.
Comment 4
2022-03-23 03:13:09 PDT
Created
attachment 455481
[details]
Patch
EWS
Comment 5
2022-03-23 06:11:56 PDT
Committed
r291743
(
248775@main
): <
https://commits.webkit.org/248775@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455481
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-03-23 09:48:02 PDT
<
rdar://problem/90705292
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug