REGRESSION(r291611): Fix GTK/WPE build https://bugs.webkit.org/show_bug.cgi?id=238248

Unreviewed build fix.


* platform/mediastream/libwebrtc/gstreamer/RealtimeIncomingVideoSourceLibWebRTC.cpp:
(WebCore::RealtimeIncomingVideoSourceLibWebRTC::OnFrame):
* platform/mediastream/libwebrtc/gstreamer/RealtimeOutgoingVideoSourceLibWebRTC.cpp:
(WebCore::RealtimeOutgoingVideoSourceLibWebRTC::videoFrameAvailable):



Canonical link: https://commits.webkit.org/248775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291743 268f45cc-cd09-0410-ab3c-d52691b4dbfc